# TicTacToe

./: README.md
Tictactoe/: package-lock.json  package.json
Tictactoe/backend/: alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
Tictactoe/backend/app/: config.py  main.py
Tictactoe/backend/app/model/: __init__.py  mixins.py  user.py
Tictactoe/backend/app/router/: user.py
Tictactoe/backend/migrations/: env.py
Tictactoe/backendold/: server.js
Tictactoe/frontend/: vercel.json
Tictactoe/frontend/src/: App.jsx  index.css
Tictactoe/frontend/src/components/: GameStatus.jsx  Menu.jsx
Tictactoe/frontend/src/pages/: Login.jsx  Oneplayer.jsx  Online.jsx  Twoplayer.jsx
Tictactoe/frontend/src/utils/: api.js  package-lock.json
Tictactoe/src/: App.css  App.jsx  Game.jsx  Oneplayer.jsx  Twoplayer.jsx
Tictactoe/src/components/: Board.jsx  Menu.jsx
Tictactoe/src/pages/: Oneplayer.jsx  Twoplayer.jsx
Tictactoe/src/utils/: AI.js  Game.js
