[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Taron Osifo",email = "taron.osifo1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.46.0,<0.47.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2 (>=2.9.12,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"